@@ -52,3 +52,10 @@ poke_send "while (1) {}\n" {}
 poke_send_signal INT
 poke_send {} "\r\n$poke_prompt"
 poke_exit
+
+set test "sigint-returns-to-prompt-2"
+poke_start
+poke_send {foo} {}
+poke_send_signal INT
+poke_send {} "\r\n$poke_prompt"
+poke_exit
